refactor:完善安装PyToolsIP的设计

--- a/config/ini/config.ini
+++ b/config/ini/config.ini
@@ -1,18 +1,5 @@
 [env]
-python =
+python = 
 
-[server]
-host = 118.89.26.198
-port = 8080
-;host = localhost
-;port = 8080
-
-[log]
-path = log
-name = pytoolsip-client
-maxBytes = 102400000
-backupCount = 10
-
-[local]
-;10 day: 60 * 60 * 24 * 10
-user_info_expire = 864000
+[pytoolsip]
+client = E:\userdata\otherApp\t1\PyToolsIP
